# 2.3-deployment-poetry

./: README.md  pyproject.toml
data/: app_flight_df.csv
models/: dec_tree.joblib
notebooks/: app-prod.ipynb  eda.ipynb  ml-app.ipynb  ml.ipynb  preprocessing.ipynb
