[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numba = "^0.60.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
